crates/harness-tui/tests/snapshots/deterministic_render_test__command_palette_renders_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: snapshot.as_str()
---

  git:test-workspace /workspace/agent-harness


                              ┌─ Commands ───────────────────────────────────────── [✗] ─┐
                              │                                                          │
                              │   search:                                                │
                              │──────────────────────────────────────────────────────────│
                              │    Session ─────────────────────────────────────────     │
                              │   ◆ New Session                                 Ctrl+N   │
                              │   ◆ New Session in Worktree          Ctrl+P → worktree   │
                              │   ◆ Agent Dashboard                         /dashboard   │
                              │   ◆ Back to Home                                 /home   │
                              │   ◆ Resume Session                             /resume   │
                              │   ◆ Rename Session                             /rename   │
                              │   ◆ Session Info                         /session-info   │
                              │   ◆ Send Feedback                            /feedback   │
                              │                                                          │
                              │    Context ─────────────────────────────────────────     │
                              │   ◆ Compact History                           /compact   │
                              │   ◆ Context Usage                             /context   │
                              │   ◆ View Plan                               /view-plan   │
                              │   ◆ Memory                                     /memory   │
                              │                                                          │
                              │    Model & Input ───────────────────────────────────     │
                              │   ◆ Switch Model                                /model   │
                              │   ◆ YOLO mode                                    /yolo   │
                              │   ◆ Multiline Input                         /multiline   │
                              │                                                          │
                              │    Tools ───────────────────────────────────────────     │
                              │   ◆ Hooks                                       /hooks   │
                              │   ◆ Plugins                                   /plugins   │
                              │   ◆ Marketplace                           /marketplace   │
                              │                                                          │
  ╭───────────────────────────│            ↑/↓ nav · Enter select · Esc close            │───────────────────────────╮
  │ ❯ Build anything          └──────────────────────────────────────────────────────────┘                           │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
