crates/harness-tui/tests/snapshots/deterministic_render_test__live_transcript_and_composer_shell_render_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: trim_trailing_snapshot_whitespace(&rendered)
---

  git:test-workspace /workspace/agent-harness


     ❯ Inspect deterministic sidebar


     Assistant verified the rendered shell.

     ◈ Searched 1 website, Searched 1 pattern














  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                                                        │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── gpt-5.4-mini ╯

  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
