crates/harness-tui/tests/snapshots/deterministic_render_test__p21_tool_display_descriptors_cover_state_families_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
assertion_line: 138
expression: trim_trailing_snapshot_whitespace(&rendered)
---

  git:test-workspace /workspace/agent-harness


     ❯ Inspect P2.1 tool display descriptors


     ◈ Listing 1 dir, Searching 2 patterns, Reading 1 skill, Reading 1 file · 2 failed
     ◆ Cancelled background task · req-bg-child
     ◆ Checked background output · req-bg-late · late_result · 3 child tool calls · 2ms

     P2.1 tool display descriptors cover all state families.






















  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                                                                            │
  ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── model-1 ╯

  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
