crates/harness-tui/tests/snapshots/deterministic_render_test__permission_modal_preserves_draft_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: rendered.as_str()
---
                                                                                                    
  git:test-workspace /workspace/agent-harness                                                       
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ┃                                                                                                 
  ┃  Allow Edit to demo.txt?                                                                        
  ┃  Apply hashline edit to demo.txt                                                                
  ┃                                                                                                 
  ┃  1 (●) Yes, enable YOLO mode                                                                    
  ┃  2 (○) Yes, remember this approval for this session                                             
  ┃  3 (○) Yes                                                                                      
  ┃  4 (○) No, reject (type to add feedback)                                                        
  ┃                                                                                                 
                                                                                                    
  1-4:activate  │  Tab:next option  │  Ctrl+o:yolo  │  Ctrl+c:cancel  │  Esc:scrollback
