crates/harness-tui/tests/snapshots/deterministic_render_test__question_permission_prompt_renders_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: rendered.as_str()
---
                                                                                                    
  git:test-workspace /workspace/agent-harness                                                       
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ┃                                                                                                 
  ┃  Pick one                                                                                       
  ┃                                                                                                 
  ┃                                                                                                 
  ┃  1 (○) A  Option A                                                                           █  
  ┃  z (○) Type your answer here                                                                    
  ┃                                                                                                 
  ┃  ↑/↓ navigate · y copy                                                        Enter:submit      
  ┃                                                                                                 
                                                                                                    
  Tab:next answer  │  Esc:scrollback  │  Shift+x:dismiss
