crates/harness-tui/tests/snapshots/deterministic_render_test__replay_failure_state_renders_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: rendered.as_str()
---
Replay · read-only · run run_fixture · 2 ev                                                                                                                                         
                                                                                                                                                                                    
  Waiting for first turn…                                                                                                                                                           
                                                                                                                                           ▼ MCP                                    
                                                                                                                                           • No MCP servers configured              
                                                                                                                                                                                    
                                                                                                                                           ▼ LSP                                    
                                                                                                                                           • No active LSP servers                  
                                                                                                                                                                                    
                                                                                                                                           ▶ Modified Files                         
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
                                                                                                                                                                                    
  ▎ Replay is read-only · run failed · inspect transcript · session shell preserved · provider stream ended before final message                                                    
    ctrl+x shortcuts  ·  tab focus  ·  ctrl+q quit                                                                                                                                  
                                                                                                                                                                                    
 HARNESS <version>
