crates/harness-tui/tests/snapshots/deterministic_render_test__replay_shell_is_read_only_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
assertion_line: 314
expression: rendered.as_str()
---
Replay · read-only · run run_fixture · 2 ev                                                         
                                                                                                    
  Waiting for first turn…                                                                           
                                                           ▼ MCP                                    
                                                           • No MCP servers configured              
                                                                                                    
                                                           ▼ LSP                                    
                                                           • No active LSP servers                  
                                                                                                    
                                                           ▶ Modified Files                         
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ▎ Replay is read-only.                                                                            
    ctrl+x shortcuts  ·  tab focus  ·  ctrl+q quit                                                  
                                                                                                    
 HARNESS <version>
