crates/harness-tui/tests/snapshots/deterministic_render_test__select_dialog_command_palette_shell_renders_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: snapshot.as_str()
---











                     Session      Commands                                         esc

                                  █ Search

                                  Suggested
                                     New session Start a fresh live session   ctrl+x n
                                     Show last error Inspect the last failed p…  error
                           “in                                                            test
                                  Sessions
                                     Continue session Continue a prior sess…  ctrl+x l
                                     Replay session Replay a previous session…  replay

                                  Agents
                                     Switch model Browse available provider…  ctrl+x m
                                     Next agent Cycle to the next primary agent    tab
                                     Previous agent Cycle to the previous …  shift+tab
                                     Cycle reasoning preset Cycle the configu…  ctrl+t
                                     Toggles Toggle profiles, tools, hooks, …  toggles





┃
┃  Type a prompt for the next turn…
┃
┃
╹▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
                                                                                                 live 0  Ctrl+p commands
