crates/harness-tui/tests/snapshots/deterministic_render_test__startup_session_history_picker_renders_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
assertion_line: 232
expression: normalize_volatile_branch(&trim_trailing_snapshot_whitespace(&rendered))
---

   test-workspace /workspace/agent-harness


           ┌─ Resume session ───────────────────────────────────────────────────── [✗] ─┐
           │                                                                            │
           │   / to search                                                     All f    │
           │────────────────────────────────────────────────────────────────────────────│
           │   Projects-workspace ────────────────────────────────────────────────────  │
           │      alpha-run                                                   4mo ago   │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │                                                                            │
           │         ↑↓ nav  |  e expand  |  / search  |  f filter  |  d delete         │
           └────────────────────────────────────────────────────────────────────────────┘
