crates/harness-tui/tests/snapshots/deterministic_render_test__startup_shell_is_compose_first_without_pty.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: normalize_volatile_branch(&trim_trailing_snapshot_whitespace(&rendered))
---

  git:test-workspace /workspace/agent-harness
















  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯ Explain deterministic TUI tests                                                            │
  ╰───────────────────────────────────────────────────────────────────────── model-1 · Demo mode ╯

  Enter:send  │  Shift+Tab:mode  │  Ctrl+x:shortcuts
