crates/harness-tui/tests/snapshots/deterministic_render_test__status_dashboard_full_surface_matches_120x40_snapshot.snap
---
source: crates/harness-tui/tests/deterministic_render_test.rs
expression: "status_dashboard_snapshot(120, 40)"
---
┌─ Status · Harness dashboard ─────────────────────────────────────────────────────────────────────────────────────────┐
│   0 agents · 0 working                                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│ ┌Agent preview─────────────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │No recorded output yet                                                                                            │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ │                                                                                                                  │ │
│ ┌Reply─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │Write a reply…                                                                                                    │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                                      │
│ ↑↓ select · Tab focus · / search · d details · h help · Esc close                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
